--- a/app/src/main/res/layout/fragment_cartitem_list.xml
+++ b/app/src/main/res/layout/fragment_cartitem_list.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="moka.pos.test.ui.shoppingcart.ShoppingCartFragment">
 
+    <TextView
+        android:id="@+id/tv_no_items"
+        style="@style/TextAppearance.AppCompat.Title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:gravity="center"
+        android:text="@string/text_lbl_no_items"
+        android:textSize="24dp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleview_items"
         android:layout_width="match_parent"
